--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 	url = git@github.com:kasperhbo/imgui.git
 	branch = docking
 
+[submodule "vendor/boost"]
+	path = vendor/boost
+	url = git@github.com:boostorg/boost.git
