Add new themes and reimplemented thememanager. Thanks to ImGui_Bundle for the code ;) https://github.com/pthom/imgui_bundle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ set(HUMMINGBIRDCOUREBASESRC
         HummingBirdCore/src/Terminal/TerminalWindow.cpp
         HummingBirdCore/src/Terminal/TerminalWindow.h
         HummingBirdCore/src/UIWindows/Themes/Themes.h
+        HummingBirdCore/src/UIWindows/Themes/Themes.cpp
         HummingBirdCore/src/UIWindows/Themes/ThemeManager.cpp
         HummingBirdCore/src/UIWindows/Themes/ThemeManager.h
         HummingBirdCore/src/stb_image.h
