--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = vendor/spdlog
 	url = git@github.com:kasperhbo/spdlog.git
 	branch = v1.x
+[submodule "vendor/imgui"]
+	path = vendor/imgui
+	url = git@github.com:KaspersTools/imgui.git
